<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etTitle"
        android:hint="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etDescription"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/etPriority"
        android:hint="@string/priority"
        android:inputType="number"
        android:minHeight="48dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/cbDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_deadline"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_date_time"
        android:focusable="false"
        android:clickable="true"
        android:visibility="gone"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9E9E9E"
        android:textColor="#FFFFFF"/>

</LinearLayout>
